# crudkit

./: CLAUDE.md  Cargo.toml  Justfile  README.md
crates/crud-rs/: Cargo.toml
crates/crud-rs/src/: axum_routes.rs  context.rs  controller.rs  create.rs  delete.rs  error.rs  lib.rs  lifetime.rs  query.rs  read.rs  repository.rs  resource.rs  update.rs  validate.rs  validation.rs
crates/crud-sea-orm/: Cargo.toml
crates/crud-sea-orm/src/: lib.rs  query.rs  repo.rs
crates/crud-shared-types/: Cargo.toml
crates/crud-shared-types/src/: condition.rs  error.rs  id.rs  lib.rs  validation.rs  ws_messages.rs
crates/crud-yew/: Cargo.toml
crates/crud-yew/src/: crud_action.rs  crud_btn.rs  crud_checkbox.rs  crud_create_view.rs  crud_datetime.rs  crud_datetime_time_selector.rs  crud_edit_view.rs  crud_field.rs  crud_fields.rs  crud_icon.rs  crud_image_chooser_modal.rs  crud_image_gallery.rs  crud_instance.rs  crud_list_view.rs  crud_offset_datetime.rs  crud_pagination.rs  crud_quicksearch.rs  crud_read_view.rs  crud_related_field.rs  crud_reset_field.rs  crud_safe_html.rs  crud_select.rs  crud_select_field.rs  crud_separator.rs  crud_slider.rs  crud_table.rs  crud_table_header.rs  crud_tabs.rs  crud_tiptap_editor.rs  crud_toast.rs  crud_toasts.rs  crud_toggle.rs  crud_tree.rs  js_tiptap.rs  lib.rs
crates/crud-yew/src/services/: crud_rest_data_provider.rs  requests.rs
crates/crud-yew/src/stores/: instance.rs  instance_views.rs
crates/crud-yew/src/types/: files.rs  mod.rs  toasts.rs
crates/crudkit-rs/: Cargo.toml
crates/crudkit-rs/src/: axum_routes.rs  context.rs  controller.rs  create.rs  delete.rs  lib.rs  read.rs  repository.rs  resource.rs  update.rs  validate.rs  validation.rs  websocket.rs
crates/crudkit-sea-orm/: Cargo.toml
crates/crudkit-sea-orm/src/: query.rs  repo.rs
crates/crudkit-yew/: Cargo.toml
crates/crudkit-yew/src/: crud_action.rs  crud_alert.rs  crud_btn.rs  crud_btn_wrapper.rs  crud_create_view.rs  crud_delete_modal.rs  crud_edit_view.rs  crud_field_label.rs  crud_fields.rs  crud_image_chooser_modal.rs  crud_instance.rs  crud_list_view.rs  crud_modal_host.rs  crud_offset_datetime.rs  crud_offset_datetime_time_selector.rs  crud_quicksearch.rs  crud_read_view.rs  crud_related_field.rs  crud_reset_field.rs  crud_select_field.rs  crud_tab.rs  crud_table.rs  crud_table_header.rs  crud_tabs.rs  crud_tiptap_editor.rs  lib.rs
crates/crudkit-yew/src/services/: crud_rest_data_provider.rs
crates/crudkit-yew/src/stores/: instance_links.rs
crates/crudkit-yew/src/types/: custom_field.rs
crates/derive-crud-columns/: Cargo.toml
crates/derive-crud-columns/src/: lib.rs
crates/derive-crud-resource/: Cargo.toml
crates/derive-crud-resource/src/: lib.rs
crates/derive-crud-resource/tests/: 01-parse.rs
crates/derive-crudkit-id/: Cargo.toml
crates/derive-crudkit-id/src/: lib.rs
crates/derive-crudkit-id/tests/: 01-parse.rs  02-missing-id-fields.rs  02-missing-id-fields.stderr  03-uncommon-name.rs  04-uncommon-name-no-annotation.rs  04-uncommon-name-no-annotation.stderr  05-id-struct.rs  06-id-enum.rs  07-display-struct.rs  08-display-enum.rs  09-serialize-deserialize.rs  progress.rs
crates/derive-field/: Cargo.toml
crates/derive-field-value/: Cargo.toml
crates/derive-field-value/src/: lib.rs
crates/derive-field/src/: lib.rs
crud-yew-js/: tiptap.js  (+2 more)
crudkit-condition/: Cargo.toml
crudkit-condition/src/: lib.rs
crudkit-core/: Cargo.toml
crudkit-core/crates/crudkit-collaboration/: Cargo.toml
crudkit-core/crates/crudkit-collaboration/src/: lib.rs
crudkit-core/crates/crudkit-condition/: Cargo.toml  README.md
crudkit-core/crates/crudkit-core/: Cargo.toml
crudkit-core/crates/crudkit-core-macro-util/: Cargo.toml
crudkit-core/crates/crudkit-core-macros/: Cargo.toml
crudkit-core/crates/crudkit-derive-core/: Cargo.toml
crudkit-core/crates/crudkit-validation/: Cargo.toml
crudkit-core/crates/derive-crudkit-id/: Cargo.toml
crudkit-core/src/: condition.rs  lib.rs
crudkit-core/src/validation/: mod.rs
crudkit-id/crates/crudkit-id/: Cargo.toml
crudkit-id/crates/derive-crudkit-id/: Cargo.toml
crudkit-leptos/: .gitignore  Cargo.toml  README.md  leptosfmt.toml
crudkit-leptos-theme/: Cargo.toml  README.md
crudkit-leptos-theme/scss/components/: field.scss  helper.scss  input.scss  instance.scss  nav.scss  pagination.scss  table.scss
crudkit-leptos-theme/scss/themes/: builder.scss  dark.scss  light.scss
crudkit-leptos-theme/src/: lib.rs
crudkit-leptos/crates/crudkit-leptos/: Cargo.toml  build.rs
crudkit-leptos/crates/crudkit-leptos-build/: Cargo.toml
crudkit-leptos/crates/crudkit-leptos-build-deps/: Cargo.toml
crudkit-leptos/crates/derive-field-signals/: Cargo.toml
crudkit-leptos/src/: crud_action.rs  crud_action_buttons.rs  crud_action_context.rs  crud_create_view.rs  crud_delete_modal.rs  crud_edit_view.rs  crud_field.rs  crud_fields.rs  crud_instance.rs  crud_instance_config.rs  crud_instance_mgr.rs  crud_list_view.rs  crud_pagination.rs  crud_read_view.rs  crud_table.rs  crud_table_body.rs  crud_table_footer.rs  crud_table_header.rs  lib.rs
crudkit-leptos/src/fields/: boolean.rs  date_time.rs  duration.rs  json.rs  mod.rs  number.rs  optional.rs  string.rs  uuid.rs  validation_status.rs
crudkit-leptos/src/stores/: instance_views.rs
crudkit-rs/crates/crudkit-rs/: Cargo.toml
crudkit-rs/crates/crudkit-rs-macros/: Cargo.toml
crudkit-rs/crates/crudkit-sea-orm/: Cargo.toml
crudkit-sea-orm/: Cargo.toml
crudkit-sea-orm-macros/: Cargo.toml
crudkit-sea-orm-macros/src/: lib.rs
crudkit-sea-orm-macros/src/derives/: create_model.rs  mod.rs  read_view.rs  sea_orm_bridge.rs  update_model.rs  validation_model.rs
crudkit-sea-orm/crates/crudkit-sea-orm/: Cargo.toml
crudkit-sea-orm/crates/crudkit-sea-orm-macros/: Cargo.toml
crudkit-sea-orm/src/: lib.rs  query.rs  repo.rs  traits.rs
crudkit-sea-orm/src/migrations/: crud_read_view.rs  m20260118_crudkit_000001_create_unified_validation_table.rs  mod.rs
crudkit-sea-orm/src/validation/: mod.rs
crudkit-shared/: Cargo.toml  README.md
crudkit-shared/src/: lib.rs
(+462 files in other folders)
