[workspace]
resolver = "2"
members = [
    "crudkit-core",
    "crudkit-core-macro-util",
    "crudkit-core-macros",
    "crudkit-leptos",
    "crudkit-leptos-theme",
    "crudkit-rs",
    "crudkit-rs-macros",
    "crudkit-rs-macros-core",
    "crudkit-sea-orm",
    "crudkit-sea-orm-macros",
    "crudkit-web",
    "crudkit-web-macros",
]

[workspace.dependencies]
# Proc-macro utilities.
darling = "0.23.0"
proc-macro-error = "1.0.4"
proc-macro-type-name = "0.1.0"
proc-macro2 = "1.0.104"
quote = "1.0.42"
syn = { version = "2.0.112", features = ["extra-traits"] }
