[package]
name = "crudkit-condition"
version = "0.1.0"
edition = "2021"

[dependencies]
crudkit-id = { path = "../crudkit-id/crates/crudkit-id" }
crudkit-shared = { path = "../crudkit-shared" }

dyn-clone = "1.0.16"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108" }
snafu = { version = "0.7.5", features = ["backtrace"] }
time = { version = "0.3.30", features = ["serde", "serde-well-known"] }
utoipa = "4.0.0"
uuid = { version = "1.6.1", features = ["v4", "v7", "serde"] }
