[package]
name = "crudkit-condition"
version = "0.1.0"
edition = "2024"

[dependencies]
crudkit-id = { path = "../crudkit-id/crates/crudkit-id" }
crudkit-shared = { path = "../crudkit-shared" }

dyn-clone = "1.0.17"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }
snafu = { version = "0.8.2", features = ["backtrace"] }
time = { version = "0.3.34", features = ["serde", "serde-well-known"] }
utoipa = { version = "5.3.1", features = ["time", "uuid"] }
uuid = { version = "1.8.0", features = ["v4", "v7", "serde"] }
