[package]
name = "crudkit-condition"
version = "0.1.0"
edition = "2024"

[dependencies]
crudkit-id = { path = "../crudkit-id/crates/crudkit-id" }
crudkit-shared = { path = "../crudkit-shared" }

dyn-clone = "1.0.20"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148" }
snafu = { version = "0.8.9", features = ["backtrace"] }
time = { version = "0.3.44", features = ["serde", "serde-well-known"] }
utoipa = { version = "5.4.0", features = ["time", "uuid"] }
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] }
