[package]
name = "crudkit-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core utilities.
dyn-clone = "1.0.20"
dyn-eq = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
typetag = "0.2.19"

# Ecosystem support.
time = { version = "0.3.44", features = ["serde", "serde-well-known"] }
utoipa = { version = "5.4.0", features = ["time", "uuid"] }
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] }

[dev-dependencies]
assertr = "0.4.3"
