[package]
name = "crudkit-sea-orm-macros"
version = "0.12.15"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
crudkit-rs-macros-core = { path = "../crudkit-rs/crates/crudkit-rs-macros-core" }
proc-macro-error = "1.0.4"
proc-macro-type-name = "0.1.0"
proc-macro2 = "1.0.104"
quote = "1.0.42"
syn = { version = "2.0.112", features = ["extra-traits"] }
