[package]
name = "crudkit-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115" }
time = { version = "0.3.34", features = ["serde", "serde-well-known"] }
utoipa = { version = "5.3.1", features = ["time", "uuid"] }
uuid = { version = "1.8.0", features = ["v4", "v7", "serde"] }
