[package]
name = "crudkit-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148" }
time = { version = "0.3.44", features = ["serde", "serde-well-known"] }
utoipa = { version = "5.4.0", features = ["time", "uuid"] }
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] }
dyn-clone = { version = "1.0.12" }
typetag = { version = "0.2.19" }
