[package]
name = "crud-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal
axum-websockets = { path = "../../../../axum-websockets" }
crud-shared-types = { path = "../../../crud-shared-types/crates/crud-shared-types" }
chrono-utc-date-time = { path = "../../../../chrono-utc-date-time", features = [
    "sea-orm",
] }

# Macros
derive-crud-columns = { path = "../derive-crud-columns" }
derive-create-model = { path = "../derive-create-model" }
derive-crud-resource-context = { path = "../derive-crud-resource-context" }
derive-update-model = { path = "../derive-update-model" }
derive-validation-model = { path = "../derive-validation-model" }

# External
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.2", features = ["v4", "v7", "serde"] }
# NOTE: Do not upgrade. Versions above 0.5 do not run on web assembly. We always use 0.5 for compatibility.
ulid = { version = "0.5", features = ["serde"] }
axum = "0.6"
indexmap = { version = "1.9", features = ["serde"] }
paste = "1.0"
log = "0.4"
async-trait = "0.1"
sea-orm = { version = "0.10", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx",
    "sqlx-postgres",
] }
sea-query = { version = "0.27" }
