[package]
name = "crud-sea-orm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal
crud-rs = { path = "../crud-rs" }
crud-shared-types = { path = "../../../crud-shared-types/crates/crud-shared-types" }
chrono-utc-date-time = { path = "../../../../chrono-utc-date-time", features = [
    "sea-orm",
] }

# External
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
# NOTE: Do not upgrade. Versions above 0.5 do not run on web assembly. We always use 0.5 for compatibility.
ulid = { version = "0.5", features = ["serde"] }
indexmap = { version = "1", features = ["serde"] }
async-trait = "0.1"
sea-orm = { version = "0.10", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx",
    "sqlx-postgres",
] }
sea-query = { version = "0.28" }
utoipa = "3"
snafu = { version = "0.7", features = ["backtrace"] }
