[package]
name = "crud-sea-orm"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
crud-rs = { path = "../crud-rs" }
crud-shared-types = { path = "../../../crud-shared-types/crates/crud-shared-types" }
indexmap = { version = "1", features = ["serde"] }
sea-orm = { version = "0.11", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx",
    "sqlx-postgres",
] }
sea-query = { version = "0.28" }
serde = { version = "1", features = ["derive"] }
snafu = { version = "0.7", features = ["backtrace"] }
tracing = "0.1"
# NOTE: Do not upgrade. Versions above 0.5 do not run on web assembly. We always use 0.5 for compatibility.
ulid = { version = "0.5", features = ["serde"] }
utoipa = "3"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
