[package]
name = "crud-shared-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal
chrono-utc-date-time = { path = "../../../../chrono-utc-date-time" }

# External
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = "0.4"
dyn-clone = "1.0"
uuid = { version = "1.2", features = ["v4", "v7", "serde"] }
# NOTE: Do not upgrade. Versions above 0.5 do not run on web assembly. We always use 0.5 for compatibility.
ulid = { version = "0.5", features = ["serde", "uuid"] }
utoipa = "2.4"
