[package]
name = "crud-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal
derive-field = { path = "../derive-field"}
derive-field-value = { path = "../derive-field-value"}
derive-crud-resource= { path = "../derive-crud-resource"}
derive-crud-selectable= { path = "../derive-crud-selectable"}

yewbi = { path = "../../../../yewbi" }
yewdux-global-stores = { path = "../../../../yewdux-global-stores" }
chrono-utc-date-time = { path = "../../../../chrono-utc-date-time" }
crud-shared-types = { path = "../../../crud-shared-types" }

# External
yew = { git = "https://github.com/yewstack/yew", features = ["tokio", "csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yewdux = { git = "https://github.com/intendednull/yewdux" }
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.86", features = ["raw_value"] }
web-sys = { version = "0.3.60", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "DomTokenList",
    "Event",
    "EventTarget",
    "DomRect",
] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
indexmap = { version = "1.9.1", features = ["serde"] }
js-sys = "0.3.60"
gloo = "0.8.0"
reqwest = { version = "0.11.12", features = ["json", "multipart"] }
uuid = { version = "1.2.1", features = ["js", "v4"], default-features = false }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
dotenv_codegen = "0.15.0"
thiserror = "1.0.37"
urlencoding = "2.1.2"
derive_more = "0.99.17"
dyn-clone = "1.0.9"
async-trait = "0.1.57"

# Only used in crud-datetime
chrono = "0.4.22"
