[package]
name = "crud-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal
derive-field = { path = "../derive-field" }
derive-field-value = { path = "../derive-field-value" }
derive-crud-resource = { path = "../derive-crud-resource" }
derive-crud-selectable = { path = "../derive-crud-selectable" }
derive-crud-action-payload = { path = "../derive-crud-action-payload" }

yewbi = { path = "../../../../yewbi" }
yewdux-global-stores = { path = "../../../../yewdux-global-stores" }
crud-shared-types = { path = "../../../crud-shared-types/crates/crud-shared-types" }

# External
yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
yewdux = { git = "https://github.com/intendednull/yewdux" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde-wasm-bindgen = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "DomTokenList",
    "Event",
    "EventTarget",
    "DomRect",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
indexmap = { version = "1", features = ["serde"] }
js-sys = "0.3"
gloo = "0.8"
reqwest = { version = "0.11", features = ["json", "multipart"] }
uuid = { version = "1", features = ["js", "v4", "v7", "serde"] }
# NOTE: Do not upgrade. Versions above 0.5 do not run on web assembly. We always use 0.5 for compatibility.
ulid = { version = "0.5", features = ["serde", "uuid"] }
lazy_static = "1"
parking_lot = "0.12"
thiserror = "1"
urlencoding = "2"
derive_more = "0.99"
dyn-clone = "1"
async-trait = "0.1"

# Only used in crud-datetime
chrono = "0.4"
time = { version = "0.3", features = ["macros", "local-offset", "wasm-bindgen"] }
