[package]
name = "crud-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
crud-condition = { path = "../../../crud-condition" }
crud-id = { path = "../../../crud-id/crates/crud-id" }
crud-shared = { path = "../../../crud-shared" }
crud-validation = { path = "../../../crud-validation" }
crud-websocket = { path = "../../../crud-websocket" }
derive-crud-action-payload = { path = "../derive-crud-action-payload" }
derive-crud-id = { path = "../../../crud-id/crates/derive-crud-id" }
derive-crud-resource = { path = "../derive-crud-resource" }
derive-crud-selectable = { path = "../derive-crud-selectable" }
derive-field = { path = "../derive-field" }
derive-field-value = { path = "../derive-field-value" }
derive_more = "0.99"
dyn-clone = "1"
gloo = "0.8"
indexmap = { version = "1", features = ["serde"] }
js-sys = "0.3"
once_cell = "1"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "1"
time = { version = "0.3", features = [
    "macros",
    "local-offset",
    "wasm-bindgen",
] }
tracing = "0.1"
# NOTE: Do not upgrade. Versions above 0.5 do not run on web assembly. We always use 0.5 for compatibility.
ulid = { version = "0.5", features = ["serde", "uuid"] }
urlencoding = "2"
uuid = { version = "1", features = ["js", "v4", "v7", "serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "DomTokenList",
    "Event",
    "EventTarget",
    "DomRect",
] }
yew = { git = "https://github.com/yewstack/yew", features = ["csr"] }
yewbi = { path = "../../../../yewbi" }
yewdux = { git = "https://github.com/intendednull/yewdux" }
yewdux-global-stores = { path = "../../../../yewdux-global-stores" }
