[package]
name = "crudkit-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
crudkit-condition = { git = "https://github.com/inf0rm4tik3r/crudkit-condition" }
crudkit-id = { git = "https://github.com/inf0rm4tik3r/crudkit-id" }
crudkit-shared = { git = "https://github.com/inf0rm4tik3r/crudkit-shared" }
crudkit-validation = { git = "https://github.com/inf0rm4tik3r/crudkit-validation" }
crudkit-websocket = { git = "https://github.com/inf0rm4tik3r/crudkit-websocket" }

# TODO: Remove this or properly provide dependency!
axum-websockets = { path = "../../../../axum-websockets" }

derive-crud-id = { git = "https://github.com/inf0rm4tik3r/crudkit-id" }

derive-create-model = { path = "../derive-create-model" }
derive-crud-columns = { path = "../derive-crud-columns" }
derive-crud-resource-context = { path = "../derive-crud-resource-context" }
derive-update-model = { path = "../derive-update-model" }
derive-validation-model = { path = "../derive-validation-model" }

async-trait = "0.1"
axum = "0.6"
indexmap = { version = "1", features = ["serde"] }
paste = "1"
sea-orm = { version = "0.11", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx",
    "sqlx-postgres",
] }
sea-query = { version = "0.28" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = { version = "0.7", features = ["backtrace"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tracing = "0.1"
utoipa = "3"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
