[package]
name = "crudkit-sea-orm"
version = "0.1.0"
edition = "2021"

[dependencies]
crudkit-rs = { path = "../crud-rs" }
crudkit-condition = { git = "https://github.com/inf0rm4tik3r/crudkit-condition" }
crudkit-shared = { git = "https://github.com/inf0rm4tik3r/crudkit-shared" }

async-trait = "0.1"
indexmap = { version = "1", features = ["serde"] }
sea-orm = { version = "0.11", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx",
    "sqlx-postgres",
] }
sea-query = { version = "0.28" }
serde = { version = "1", features = ["derive"] }
snafu = { version = "0.7", features = ["backtrace"] }
tracing = "0.1"
utoipa = "3"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
