[package]
name = "derive-crud-columns"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro-type-name = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
