[package]
name = "derive-crud-resource"
version = "0.0.1"
edition = "2021"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
darling = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
crud-yew = { path = "../crud-yew" }
serde = "1"
trybuild = { version = "1", features = ["diff"] }
