[package]
name = "derive-crudkit-id"
version = "0.0.1"
edition = "2021"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
serde = "1"
serde_json = "1"
trybuild = { version = "1", features = ["diff"] }

[dependencies]
crudkit-id = { path = "../crudkit-id" }
darling = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro-type-name = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
