[package]
name = "derive-field-value"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
derive-helper = { workspace = true }
darling = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
