[package]
name = "derive-field"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
create-id-impl = { path = "../../../crud-shared-types/crates/create-id-impl" }

darling = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
