[package]
name = "crudkit-core-macros"
version = "0.1.0"
edition = "2024"
description = "CkId derive macro for crudkit"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
crudkit-core = { path = "../crudkit-core" }
darling = { workspace = true }
indoc = "2.0.7"
proc-macro-error = { workspace = true }
proc-macro-type-name = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
assertr = "0.4.3"
serde = "1.0.228"
serde_json = "1.0.148"
time = "0.3.44"
trybuild = { version = "1.0.114", features = ["diff"] }
uuid = { version = "1.19.0", features = ["v4"] }
