[package]
name = "crudkit-id"
version = "0.1.0"
edition = "2021"

[dependencies]
dyn-clone = "1.0.17"
serde = { version = "1.0.197", features = ["derive"] }
time = { version = "0.3.34", features = ["serde", "serde-well-known"] }
utoipa = "4.2.0"
uuid = { version = "1.8.0", features = ["v4", "v7", "serde"] }
