[package]
name = "derive-crudkit-id"
version = "0.0.1"
edition = "2024"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
serde = "1.0.197"
serde_json = "1.0.115"
trybuild = { version = "1.0.91", features = ["diff"] }
uuid = { version = "1.19.0", features = ["v4"] }
time = "0.3.44"

[dependencies]
crudkit-id = { path = "../crudkit-id" }
darling = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro-type-name = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
indoc = "2.0.7"
