[package]
name = "crudkit-leptos"
version = "0.1.0"
edition = "2021"

[dependencies]
crudkit-condition = { path = "../../../crudkit-condition" }
crudkit-id = { path = "../../../crudkit-id/crates/crudkit-id" }
crudkit-shared = { path = "../../../crudkit-shared" }
crudkit-validation = { path = "../../../crudkit-validation" }
crudkit-web = { path = "../../../crudkit-web/crates/crudkit-web" }
crudkit-websocket = { path = "../../../crudkit-websocket" }
derive-crud-action-payload = { path = "../../../crudkit-web/crates/derive-crud-action-payload" }
derive-crud-resource = { path = "../../../crudkit-web/crates/derive-crud-resource" }
derive-crud-selectable = { path = "../../../crudkit-web/crates/derive-crud-selectable" }
derive-crudkit-id = { path = "../../../crudkit-id/crates/derive-crudkit-id" }
derive-field = { path = "../../../crudkit-web/crates/derive-field" }
derive-field-signals = { path = "../derive-field-signals" }
derive-field-value = { path = "../../../crudkit-web/crates/derive-field-value" }

dyn-clone = "1.0.17"
indexmap = { version = "2.2.6", features = ["serde"] }
#leptonic = { path = "../../../../leptonic/leptonic", features = ["tiptap"] }
leptonic = { version = "0.5.0", git = "https://github.com/lpotthast/leptonic", branch = "main", features = ["tiptap"] }
leptos = "0.6.9"
serde = { version = "1.0.197", features = ["derive"] }
# TODO: Only required to handle TipTap content. Can we get rid of this?
serde_json = { version = "1.0.115", features = ["raw_value"] }
time = { version = "0.3.34", features = [
    "macros",
    "local-offset", # TODO: Describe why this feature is required.
    "wasm-bindgen",
] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["js", "v4", "v7", "serde"] }
