[package]
name = "crudkit-leptos"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
crudkit-condition = { path = "../../../crudkit-condition" }
crudkit-id = { path = "../../../crudkit-id/crates/crudkit-id" }
crudkit-shared = { path = "../../../crudkit-shared" }
crudkit-validation = { path = "../../../crudkit-validation" }
crudkit-web = { path = "../../../crudkit-web/crates/crudkit-web" }
crudkit-websocket = { path = "../../../crudkit-websocket" }
derive-crud-action-payload = { path = "../../../crudkit-web/crates/derive-crud-action-payload" }
derive-crud-resource = { path = "../../../crudkit-web/crates/derive-crud-resource" }
derive-crud-selectable = { path = "../../../crudkit-web/crates/derive-crud-selectable" }
derive-crudkit-id = { path = "../../../crudkit-id/crates/derive-crudkit-id" }
derive-field = { path = "../../../crudkit-web/crates/derive-field" }
derive-field-signals = { path = "../derive-field-signals" }
derive-field-value = { path = "../../../crudkit-web/crates/derive-field-value" }

dyn-clone = "1.0.17"
indexmap = { version = "2.7.1", features = ["serde"] }
#leptonic = { path = "../../../../leptonic/leptonic", features = ["tiptap"] }
leptonic = { version = "0.5.0", git = "https://github.com/lpotthast/leptonic", branch = "migrate-to-leptos-0.7", features = ["tiptap"] }
leptos = "0.7"
serde = { version = "1.0.217", features = ["derive"] }
# TODO: Only required to handle TipTap content. Can we get rid of this?
serde_json = { version = "1.0.138", features = ["raw_value"] }
time = { version = "0.3.37", features = [
    "macros",
    "local-offset", # TODO: Describe why this feature is required.
    "wasm-bindgen",
] }
tracing = "0.1.41"
uuid = { version = "1.12.1", features = ["js", "v4", "v7", "serde"] }

[build-dependencies]
anyhow = "1.0.79"
cargo_toml = "0.21.0"
lazy_static = "1.4.0"
crudkit-leptos-theme = { path = "../../../crudkit-leptos-theme" }
