[package]
name = "derive-field-signals"
version = "0.0.1"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
syn = { workspace = true }
