[package]
name = "crudkit-rs-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
crudkit-rs-macros-core = { path = "../crudkit-rs-macros-core" }
proc-macro-error = { workspace = true }
proc-macro-type-name = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
